<resources>
    <string name="app_name">voip</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_password2">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_new_password_retype">Retype New Password</string>
    <string name="prompt_retype">Retype</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_mismatch_retype_password">Retyped password is mismatched</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dialpad">Dialpad</string>
    <string name="contact">Contact</string>
    <string name="conference">Conference</string>
    <string name="dial_0">0</string>
    <string name="dial_1">1</string>
    <string name="dial_2">2</string>
    <string name="dial_3">3</string>
    <string name="dial_4">4</string>
    <string name="dial_5">5</string>
    <string name="dial_6">6</string>
    <string name="dial_7">7</string>
    <string name="dial_8">8</string>
    <string name="dial_9">9</string>
    <string name="dial_asterisk">*</string>
    <string name="dial_sharp">#</string>
    <string name="dial_add">Add</string>
    <string name="dial_call">Call</string>
    <string name="dial_del">Del</string>
    <string name="register">Register</string>
    <string name="account">Account Information</string>
    <string name="changeEmail">Change E-mail</string>
    <string name="changePassword">Change Password</string>
    <string name="updateUserInfo">Update</string>
    <string name="edit_contact_list">Edit Contact List</string>
    <string name="log_out">Log Out</string>
    <string name="new_conference_call">New</string>
    <string name="new_conference_cancel">Cancel</string>
    <string name="new_conference_attendee1">User 1</string>
    <string name="new_conference_attendee2">User 2</string>
    <string name="new_conference_attendee3">User 3</string>
    <string name="new_conference_Add">Add</string>
    <string name="password_question">What kind of animal do you like?</string>
    <string name="password_hint">Password Hint</string>
    <string name="password_forget">Forget PW</string>
    <string name="phone_number">Phone Number</string>
    <string name="duplicated_phone">Duplicated Phone Number</string>
    <string name="duplicated_user">Duplicated User</string>
    <string name="new_contact">Add New Contact</string>
    <string name="change_new_email">New Email</string>
    <string name="cancel">Cancel</string>

</resources>
